--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@angular/core": "~10.1.4",
     "@angular/fire": "^6.0.3",
     "@angular/forms": "~10.1.4",
+    "@angular/localize": "~10.1.4",
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.0",
+    "bootstrap": "^4.5.0",
     "classlist.js": "^1.1.20150312",
     "firebase": "^7.24.0",
     "ngx-toastr": "^13.1.0",
